--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profile.ProfileActivity">
+    tools:context=".password.ResetPasswordActivity">
 
     <include
         layout="@layout/custom_progressbar"
         android:id="@+id/progressBar"
         android:visibility="gone"/>
 
-    <!--TODO change circular image view back to image view-->
-    <com.mikhaellopez.circularimageview.CircularImageView
+    <ImageView
         android:id="@+id/ivProfile"
         android:layout_width="120dp"
         android:layout_height="120dp"
@@ -20,9 +19,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:onClick="changeImage"
-        android:src="@drawable/default_profile"
-        tools:ignore="UsingOnClickInXml" />
+        android:src="@drawable/ic_ivanchat" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -35,25 +32,13 @@
         app:layout_constraintTop_toBottomOf="@+id/ivProfile">
 
         <LinearLayout
+            android:id="@+id/llResetPassword"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/card_border"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="12dp">
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="8dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/enter_name" />
-            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -70,43 +55,62 @@
 
 
             <Button
-                android:id="@+id/btnLogin"
+                android:id="@+id/btnResetPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:onClick="btnResetPasswordClick"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
-                android:text="@string/save"
-                android:onClick="btnSaveClick"
+                android:text="@string/reset_password"
                 tools:ignore="UsingOnClickInXml" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/card_border"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="14dp"
+            android:visibility="gone"
+            tools:visibility="visible">
+
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/tvMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:gravity="center_horizontal"
-                android:onClick="btnChangePasswordClick"
-                android:text="@string/change_password"
+                android:gravity="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="@color/red" />
+                tools:text="@string/reset_password_instructions" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnRetry"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:onClick="btnResetPasswordClick"
+                    android:text="@string/retry" />
+
+                <Button
+                    android:id="@+id/btnClose"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:onClick="btnCloseClick"
+                    android:text="@string/close" />
+            </LinearLayout>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
 
-    <Button
-        android:id="@+id/btnLogout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        android:text="@string/logout"
-        app:backgroundTint="@color/red"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:onClick="btnLogoutClick"
-        />
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
