--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".signup.SignupActivity">
 
+    <include
+        layout="@layout/custom_progressbar"
+        android:id="@+id/progressBar"
+        android:visibility="gone"/>
 
     <!--TODO change circular image view back to image view-->
     <com.mikhaellopez.circularimageview.CircularImageView
