--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#F44336</color>
     <color name="gray">#ACACAC</color>
+    <color name="chat_background">#ededed</color>
+    <color name="linkColor">#2196F3</color>
 </resources>
