--- a/app/src/main/res/drawable/received_message_background.xml
+++ b/app/src/main/res/drawable/received_message_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid
-         android:color="@color/purple_200"
+         android:color="@color/blue"
         ></solid>
 
     <corners
