--- a/app/src/main/res/drawable/sent_message_background.xml
+++ b/app/src/main/res/drawable/sent_message_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid
-         android:color="@color/design_default_color_primary"
+         android:color="@color/dark_blue"
         ></solid>
 
     <corners
